IJPL-148271 SystemRuntimeCollector: add add-opens presence 1
also, don't report presence events which resolved to false

GitOrigin-RevId: 12e47419c77e52d3d18f341402e268938b37b8e0